--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,8 @@ dependencies {
 //	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	implementation 'mysql:mysql-connector-java'
-//	implementation "com.querydsl:querydsl-jpa"
-//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+	implementation "com.querydsl:querydsl-jpa"
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
